# sigi

./: .env.example  .gitignore  docker-compose.yml
.agents/: fix-environment.md  scaffold-backend.md  setup-testing-env.md
.agents/rules/: backend_architecture.md  documentation_code.md  frontend_governance.md  infrastructure_docker.md  secrets-and-env-governance.md  sigi_development_governance.md  tech-stack-core.md  testing_mindset.md
.agents/skills/code-linter/: SKILL.md  run.sh
.agents/skills/container-package-manager/: SKILL.md  sync.sh
.agents/skills/create-api-queries/: SKILL.md  main.py
.agents/skills/db-migration/: SKILL.md  run.sh
.agents/workflows/: init-ecosystem.md  setup-testing-env.md  ui-prototyping.md
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/core/: auth.py  celery.py  db.py
backend/app/modules/fleet/: models.py  router.py  schemas.py  tasks.py
backend/app/modules/fleet/endpoints/: drivers.py  reservations.py  vehicles.py
backend/app/modules/fleet/repositories/: driver_repository.py  reservation_repository.py  vehicle_repository.py
backend/app/modules/fleet/services/: fleet_service.py
backend/tests/: conftest.py  test_health.py
backend/tests/modules/fleet/: test_fleet_scenarios.py
docs/requisitos/: frota
docs/specs/: backend_architecture_guidelines.md  design_system_mapping.md  sigi_bootstrap_architecture.md  spec_005_design_system_core.md  testing_architecture_guidelines.md  ux_accessibility_guidelines.md
frontend/: Dockerfile  package-lock.json  package.json
(+19 files in other folders)
